# medical-invoice-ocr

./: .gitignore  README.md  app.py  build_exe.ps1  medical_invoice_ocr.spec  pyproject.toml  requirements.txt  run_gui.bat  setup.bat
.github/workflows/: build.yml
src/medical_invoice_ocr/: __init__.py  cli.py  exporter.py  gui.py  models.py  ocr_engine.py  parser.py  pipeline.py
src/medical_invoice_ocr/resources/: __init__.py  fill_invoice.py  template.xlsx  verify_invoice.py
tests/: test_exporter.py  test_parser.py
